          'certificate' (thanks to Jack).
- TW-1373 taskrc.vim VIM syntax file updated (thanks to lolilolicon).
- TW-1377 Tags in default.command are treated as "operator text".
- TW-1381 blocking report exits with "Unknown error" and exit code 3.
- TW-1383 Segmentation fault running import-yaml.pl with included example
          (thanks to Markus Beppler).
- Removed deprecated 'echo.command' setting, in favor of the 'header' and
  'affected' verbosity tokens.
- Removed deprecated 'edit.verbose' setting, in favor of the 'edit' verbosity
  token.
- Includes utility 'calc' for quick command line calculations using the new
  expression evaluator.
- Deprecated '_query' alias.
- Removed deprecated 'push', 'pull' and 'merge' commands.
- Removed version 1.x column name support.
- Removed version 1.x sort column support.
- Old-style color names including underscores are no longer supported.
- Removed priority counts from the 'projects' report.
- New themes: dark-default-16.theme, dark-gray-blue-256.theme
- Added certificate verification to GnuTLS versions < 2.9.10 (thanks to Alexander
  Sulfrian).
- Added certificate hostname verification (thanks to Alexander Sulfrian).
- Removed debugging code.
- Added details in debug mode, for unrecognized data (thanks to Kosta Harlan).
- Removed unused 'patterns' configuration variable.
- Regular expressions are now enabled by default.
- New verbosity token 'filter' shows the complete filter used by the last
  command.
- Display debug/release build type in the diagnostics command.
- Removed obsolete task-faq.5 and task-tutorial.5 man pages.
- French localization (thanks to leowzukw).
- Removed deprecated 'report.X.limit' feature.
- Improved bash completion when TASKRC is exported.
- Segfault when 'project:android' is split into 'and' and 'roid' (thanks to
  Richard Boß).
- Fixed typo in 'newest' and 'oldest' report definitions (thanks to Richard Boß).
- The 'diagnostics' command obeys color settings.